--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-firebase-hooks": "^5.1.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
